# genshin_tool

./: .env.development  README.md  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  Container.vue  config.js  db.js  genshin.js  get_data.js  i18n.js  main.js  mihoyo.js  mihoyo_api.js  request.js  router.js  store.js  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: genshin_service.rs  main.rs  utils.rs
src/components/: About.vue  AppMain.vue  Chart.vue  DataTable.vue  Debug.vue  Demo.vue  Forbidden.vue  NotFound.vue  Setting.vue  Statistics.vue  UserList.vue
src/pages/: ChartList.vue  DataTable.vue  Home.vue  Login.vue  LoginGenshin.vue  LoginQRcode.vue  login.vue
src/rest-api/: createGenshinQRLogin.http  gacha.http  getMultiTokenByLoginTicket.http  mys_qr_login.http  t1.http  t2.http
